whishlist page fixed

--- a/app/design/frontend/creo_mobile/default/template/wishlist/item/column/cart.phtml
+++ b/app/design/frontend/creo_mobile/default/template/wishlist/item/column/cart.phtml
@@ -52,7 +52,7 @@ function decrementQty(fid){
 }
 
 </script>
-  <div class="cart-area">
+  <div class="cart-area dashboar_whishlist_addtocartArea">
     <h3>ADD TO CART</h3>
     <span class="price"><?php echo $this->getPriceHtml($product, empty($options));?></span>
 
