--- a/app/design/frontend/creo_mobile/default/template/wishlist/item/list.phtml
+++ b/app/design/frontend/creo_mobile/default/template/wishlist/item/list.phtml
@@ -84,7 +84,7 @@
 
     <?php foreach ($this->getItems() as $item): ?>
 
-    <div class="product-area">
+    <div class="product-area dashboar_whishlit_productdetail">
 
       <?php
 
