--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -447,7 +447,7 @@ p.style1 {
 }
 #nav ol > li > a {
 	display: block;
-	padding: 0 15px 5px;
+	padding: 0 12px 5px;
 	position: relative;
 }
 #nav ol > li a:hover { text-decoration: none; }
@@ -5558,7 +5558,7 @@ h3.inline-h span:before{
 	.page-print .buttons-set button {display: none;}
 }
 @media only screen and (max-width: 1199px) {
-	#nav ol > li > a{padding: 0 12px 5px;}
+	#nav ol{font-size: 13px;}
 	.search-form{width: 130px;}
 	.search-form input[type="text"]{width: 99px;}
 	.dark-box .box { height: 280px; }
@@ -5604,7 +5604,8 @@ h3.inline-h span:before{
 	.products-grid .btn-holder a:first-child{width: 24%;}
 	.products-grid .btn-holder a{width: 74%;}
 	#nav .links-area{width: 40%;}
-	#nav ol > li > a {padding: 0 6px 5px;}
+	#nav ol > li{margin: 0 4px 0 0;}
+	#nav ol > li > a {padding: 0 8px 5px;}
 	.products-grid .mp_quickview_icon{top: 260px !important;}
 	.subscribe-form.footer-form .button.newslettersubscribe{width: 57px !important;}
 	.product-detail .btn-holder button:first-child{width: 80.4%;}
@@ -5620,7 +5621,7 @@ h3.inline-h span:before{
 	.small-header #nav ol{padding: 2px 0 0;}
 	#nav ol { font: 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 	#nav ol > li { margin: 0 2px 0 0; }
-	#nav ol > li > a { padding: 5px 8px; }
+	#nav ol > li > a { padding: 3px 6px 7px; }
 	#nav ol > li.active a::before,
 	#nav ol > li:hover a::before { height: 4px; }
 	.search-form {
