--- a/app/design/frontend/creo_mobile/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/layerednav/layer.phtml
@@ -170,16 +170,22 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                             <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Tshirt Color(s): </label>
                                             <dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
                                     <?php } else if ($_filter->getVar() == 'universal_categories') {
+                                            $currentUrl = Mage::helper('core/url')->getCurrentUrl();
+											if (strpos($currentUrl,'universal_categories=231&custom=1') ==  false) {
                                         ?>
-                                        <span id="search-by" class="search-by">Search By Design</span>
-                                        <div for="search-by" class="cate-open-close">
+								
+                                        <span>Search By Design: </span>
+                                        <div class="cate-open-close">
+
                                             <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
-                                            <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categorie(s): </label> -->
-                                            <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">
+                                            <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
+                                            <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">            
                                                 <li><a class="fme_layered_clearall" style="" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('View All') ?></a></li>
                                                 <?php echo $_filter->getHtml() ?>
+
                                             </ul></div>
                                     <?php
+											}
                                     }
                                 } else if ($current_category_p_id != '57' || $current_category_p_id != '58') {
                                     if ($_filter->getVar() == 'gender') {
@@ -216,7 +222,10 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                             <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Material: </label> -->
                                             <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
                                     <?php } else if ($_filter->getVar() == 'universal_categories') {
+                                            $currentUrl = Mage::helper('core/url')->getCurrentUrl();
+											if (strpos($currentUrl,'universal_categories=231&custom=1') ==  false) {
                                         ?>
+								
                                         <span>Search By Design: </span>
                                         <div class="cate-open-close">
 
@@ -228,6 +237,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 
                                             </ul></div>
                                     <?php
+											}
                                     }
                                 }
                             endif;
