--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -111,7 +111,7 @@ p.style { font-family: 'Roboto Condensed', sans-serif; font-size: 16px; color: #
 #container .grid li { float: left; width: 20%; height: 50px; border-right: 1px dotted #CCC; border-bottom: 1px dotted #CCC; padding: 20px; }
 .glyphicon { position: relative; top: 9px; display: inline-block;  font-family: 'Glyphicons Halflings' line-height: 1;
 -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; color: #aaaaaa; left: 11px; font-size: large; }
-form select { width: 232px; height: 35px; position: relative; font-family: 'Roboto Condensed', sans-serif; font-size:14px;
+form select { width:100%; height: 35px; position: relative; font-family: 'Roboto Condensed', sans-serif; font-size:14px;
 color:#222;border-color:#e6e6e6;}
 p.style1 { font-family: 'Roboto Condensed', sans-serif; font-size: 19px; color: #888888; position: relative; top: 12px; }
 #wrapper { overflow: hidden; position: relative; background: #fff; }
