--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -1210,7 +1210,7 @@ padding: 5px 8px; margin:0;}
 .dashboar_whishlit_productdetail { float: left; width: 100%;}
 .dashboar_whishlist_addtocartArea { float: left !important; width: 100% !important; min-height: auto !important;}
 .dashboar_whishlist_addtocartArea h3 { display: none;}
-.bottom-area { position: relative; top: 50px;}
+.dashboar_whishlist_addtocartArea .bottom-area { position: relative; top: 50px;}
 .dashboar_whishlist_addtocartArea .price { position: relative; top: 27px; left: -9px;}
 a[class*='_selected_']{
     color: #fff !important;
