black n white category page

--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -189,7 +189,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                             </ul></div>
                                     <?php
 											}elseif(strpos($currentUrl,'custom=1') ==  true){
-											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('BlacknWhiteBanner')->toHtml();
+											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
 												
 											}
                                     }
@@ -244,7 +244,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                             </ul></div>
                                     <?php
 											}elseif(strpos($currentUrl,'custom=1') ==  true){
-											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('BlacknWhiteBanner')->toHtml();
+											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
 												
 											}
                                     }
