cart page item left alignment

--- a/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
@@ -51,7 +51,7 @@
     <?php
 	if( $_category->getName() == 'Caps' ){
 	?> 
-	<div class="panel panel-default tco">
+	<div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse7" data-parent="#accordion" 
