--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -569,6 +569,8 @@
 .checkout-cart-index .size-area_outer .size-area {
     text-align: center;
     margin: auto;
+	padding: 0;
+	float: left;
 }
 .checkout-cart-index .size-area_outer .size-area li {
 float: none;display: inline-block;padding:3px 5px;
@@ -1224,6 +1226,8 @@ a[class*='_selected_']{
    pointer-events: none;
    cursor: default;
 }
+.cartPage_custome_responsive .qty-area { margin: 0 !important;}
+.cartPage_custome_responsive .text-area { text-align: center;}
 
 @media (max-width:359px){
 .cart-btn-area .btn-holder .button2,
