--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -124,7 +124,7 @@ p.style1 { font-family: 'Roboto Condensed', sans-serif; font-size: 19px; color: 
 .logo img { display: block; width: 100%; height: auto; }
 .main-menu{height:80px;position:relative;width:100%;}
 .main-menu .bgr-icon{font-size:30px;color:#ed5164;padding:6px 8px;border:1px solid #ed5164;top:18px;cursor:pointer;
-position:absolute;border-radius:0;left:5px;}
+position:absolute;border-radius:0;left:5px;z-index:999999;}
 .main-menu .main-menu-content { display: none;}
 .main-menu .main-menu-content #nav {position:absolute; top: 88px; left: 0; width: 100%; background-color: #fff; z-index: 555; }
 body.canvas-slid #disable_view{position: fixed;z-index: 9998;background-color: rgba(0, 0, 0, 0.35);height: 100%;width: 100%;display: block;}
@@ -1255,7 +1255,8 @@ Label the data
 .tool-tip-content img{max-width:100%;}
 .st-head-row dl{color:#fff;}
 .navmenu,.navbar-offcanvas{width:250px;}
-
+.cartPage_custome_responsive td.product-cart-actions .qty-area{margin:0;}
+.cartPage_custome_responsive td.product-cart-actions .size-area_outer{margin-left: -35%;}
 /* RESPONSIVE EXAMPLE */
 .stacktable.large-only{display:table;}
 .stacktable.small-only{display:none;}
@@ -1268,6 +1269,7 @@ Label the data
 .stacktable.small-only { display: table; }
 }
 @media (max-width:359px){
+.cartPage_custome_responsive td.product-cart-actions .size-area_outer{margin-left: -32%;}
 .products-grid .btn-holder a,.form-holder .submit-holder button{font-size:10px;}
 .products-grid .text-area .price,.products-grid .text-area h3{font-size:11px;}
 .checkout-form .form-group label{font-size:12px;}
