--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -991,7 +991,7 @@ display: none;
 .price-area .old-price .price { color: #f16167; font-size: 18px; font-style: normal; text-decoration: line-through; }
 .price-area .price-box { overflow: hidden; }
 .price-area .price-info { float: left; }
-#fme_filters_list .cate-open-close { float: none; display: inline-block; vertical-align: middle; position: relative; margin: 0 25px 0 0; z-index: 22; }
+#fme_filters_list .cate-open-close{float:none;display:inline-block;vertical-align:middle;position:relative;margin:0 5px 0 0;z-index:22;}
 #fme_filters_list .cate-open-close .opener { display: inline-block; vertical-align: middle; padding: 0 18px 0 7px; margin: 0; position: relative; color: #222; text-transform: uppercase; font: 13px/20px "Roboto Condensed", Helvetica, Arial, sans-serif; border: 1px solid #ccc; width: 130px; }
 #fme_filters_list .cate-open-close.active .opener, #fme_filters_list .cate-open-close:hover .opener { text-decoration: none; }
 #fme_filters_list .cate-open-close .opener:before { width: 9px; height: 19px; position: absolute; top: 8px; right: 5px; border-color: #888 transparent transparent; border-style: solid; border-width: 5px 4px 0; content: ''; }
@@ -1264,11 +1264,11 @@ Label the data
 .page-print .subtitle { margin-bottom: 99px; }
 .page-print .buttons-set button { display: none; }
 }
-@media (max-width: 800px) {
+@media only screen and (max-device-width:800px) {
 .stacktable.large-only { display: none; }
 .stacktable.small-only { display: table; }
 }
-@media (max-width:359px){
+@media only screen and (max-device-width:359px){
 .products-grid .btn-holder a,.form-holder .submit-holder button{font-size:10px;}
 .products-grid .text-area .price,.products-grid .text-area h3{font-size:11px;}
 .checkout-form .form-group label{font-size:12px;}
