--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -1210,13 +1210,13 @@ transform: skewX(0deg); -moz-transform: skewX(0deg); -ms-transform: skewX(0deg);
 .customer-account #wishlist-view-form .product-area .cancel { color: #ddd; font-size: 16px; position: absolute; right:30px; top: 12px;}
 .modal-dialog .checkout-cart-index .btn-holder .btn-proceed-checkout { padding: 0px; font-size: 12px;}
 .dashboard_whishlit_img { float: left; width: 100%; text-align: center; padding: 7px 0; position: relative;
- top: -125px; display: inline-block;}
+margin-top:-125px; display: inline-block;}
 .dashboard_whishlit_img img { margin: auto !important; float: none !important;}
 .dashboar_whishlit_productdetail { float: left; width: 100%;}
 .dashboar_whishlist_addtocartArea { float: left !important; width: 100% !important; min-height: auto !important;}
 .dashboar_whishlist_addtocartArea h3 { display: none;}
-.dashboar_whishlist_addtocartArea .bottom-area { position: relative; top: 50px; }
-.dashboar_whishlist_addtocartArea .price { position: relative;  top: 30px; width: 100%; display: inline-block !important;}
+.dashboar_whishlist_addtocartArea .bottom-area { position:relative;margin-top: 0px; }
+.dashboar_whishlist_addtocartArea .price { position:relative;top:16px; width: 100%; display: inline-block !important;}
 a[class*='_selected_']{
     color: #fff !important;
 	background: #000;
