--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -123,8 +123,8 @@ p.style1 { font-family: 'Roboto Condensed', sans-serif; font-size: 19px; color: 
 .logo { display: block; width: auto; margin: 15px auto; max-width: 100px; }
 .logo img { display: block; width: 100%; height: auto; }
 .main-menu{height:80px;position:relative;width:100%;}
-.main-menu .bgr-icon{font-size:30px;color:#ed5164;padding:6px 8px;border:1px solid #ed5164;top:18px;cursor:pointer;
-position:absolute;border-radius:0;left:5px;z-index:999999;}
+.main-menu .bgr-icon{font-size:30px;color:#ed5164;padding:6px 8px;border:1px solid #ed5164;top:8px;cursor:pointer;
+position:absolute;border-radius:0;left:0px;z-index:999999;background-color:#fff;}
 .main-menu .main-menu-content { display: none;}
 .main-menu .main-menu-content #nav {position:absolute; top: 88px; left: 0; width: 100%; background-color: #fff; z-index: 555; }
 body.canvas-slid #disable_view{position: fixed;z-index: 9998;background-color: rgba(0, 0, 0, 0.35);height: 100%;width: 100%;display: block;}
@@ -1263,6 +1263,25 @@ body.customer-account-login #footer,body.customer-account-login .footer_termscon
 body.customer-account-login #footer{padding-bottom:0;}
 .christmas{padding:10px  0;}
 .christmas img{max-width:100%;}
+.main-menu .bgr-icon .glyphicon-align-justify:before{}
+body.canvas-slid .glyphicon-align-justify:before{content:"\e014";
+-webkit-animation: animaterotate 1s 1;
+-moz-animation: animaterotate 1s 1;
+animation: animaterotate 1s 1;
+}
+@-webkit-keyframes animaterotate {
+0% { -webkit-transform:rotate(0deg);}
+100% { -webkit-transform:rotate(360deg);}
+}
+@-moz-keyframes animaterotate {
+0% { -moz-transform:rotate(0deg);}
+100% { -moz-transform:rotate(360deg);}
+}
+@keyframes animaterotate {
+0% {transform:rotate(0deg);}
+100% {transform:rotate(360deg);}
+}
+
 /* RESPONSIVE EXAMPLE */
 .stacktable.large-only{display:table;}
 .stacktable.small-only{display:none;}
