float menu gray area x added and listing click issue fixed and border added on crazyone on desktop/mobile

--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -460,7 +460,8 @@ p.style1 {
 	right: 0;
 }
 #nav ol > li.active > a:before,
-#nav ol > li:hover > a:before {
+#nav ol > li:hover > a:before,
+#nav ol > li:nth-child(5) a:before{
 	position: absolute;
 	bottom: 0;
 	left: 0;
