--- a/app/design/frontend/creo_mobile/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo_mobile/default/template/catalog/product/list.phtml
@@ -46,6 +46,10 @@ $_helper = $this->helper('catalog/output');
             <?php $_iterator = 0; ?>
             <ol class="products-list products-grid" id="products-list">
             <?php foreach ($_productCollection as $_product): ?>
+	        <?php if(Mage::helper('core')->isModuleEnabled('MST_Pdp')) : ?>
+
+		<?php $designBtnObj = new MST_Pdp_Block_Designbutton(); ?>
+                <?php if (!$designBtnObj->isDesignAble()) {//do not load PDP products ?>
                     <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
                         <div class="list_product_img">
                             <a  href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(480, 650); ?>" width="414" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), true, true) ?>" /></a>
@@ -68,6 +72,8 @@ $_helper = $this->helper('catalog/output');
 
                         </div>
                     </li>
+		<?php }//not load PDP product condition ends here?>
+		<?php endif; //MST_Pdp check ends?>
         <?php endforeach; ?>
             </ol>
             <script type="text/javascript">decorateList('products-list', 'none-recursive')</script>
@@ -114,6 +120,11 @@ $_helper = $this->helper('catalog/output');
             ?>
             <?php $i = 0;
             foreach ($_productCollection as $_product): ?>
+		<?php if(Mage::helper('core')->isModuleEnabled('MST_Pdp')) : ?>
+
+                <?php $designBtnObj = new MST_Pdp_Block_Designbutton(); ?>
+                <?php if (!$designBtnObj->isDesignAble()) {//do not load PDP products ?>
+
                 <?php if ($i++ % $_columnCount == 0): ?>
                     <ul class="products-grid">
                     <?php endif ?>
@@ -134,23 +145,23 @@ $_helper = $this->helper('catalog/output');
                                     <!--<a href="javascript:;" onclick="setLocationAjax('<?php echo $this->getAddToCartUrl($_product) ?>', '<?php echo $_product->getId() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>-->
                                 <?php //} else { ?>
                                 <?php if($_product->isConfigurable()){ ?> 
-                                <a href="javascript:;" onclick="setLocation('<?php echo $_product->getProductUrl() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
+                                    <a href="javascript:;" onclick="setLocation('<?php echo $_product->getProductUrl() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
                                 <?php
-								}else{
-								?>
-                                    <a href="javascript:;" onclick="setLocation('<?php echo $this->helper('checkout/cart')->getAddUrl($_product) ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
-                                    <?php
-								}
-									?>
+				}else{
+				?>
+                                    <a href="javascript:;" onclick="setLocation('<?php echo $this->helper('checkout/cart')->getAddUrl($_product) ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>				      <?php
+				}
+				?>
                                 <?php //} ?>
-
                             </div>
                         </div>
                     </li>
                     <?php if ($i % $_columnCount == 0 || $i == $_collectionSize): ?>
                     </ul>
-                <?php endif ?>
-            <?php endforeach ?>
+		<?php endif; ?>
+		<?php }//not load PDP product condition ends here?>
+                <?php endif; //MST_Pdp check ends?>
+            <?php endforeach; ?>
             <script type="text/javascript">decorateGeneric($$('ul.products-grid'), ['odd', 'even', 'first', 'last'])</script>
         <?php endif; ?>
 
