--- a/app/design/frontend/creo_mobile/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/layerednav/layer.phtml
@@ -99,8 +99,16 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                     if (changeTo.indexOf("view all") <= -1) {//do not trigger onclick on the passed param and not on view all as well
                                         //jQuery(v).attr('onclick', 'changeUrl(\'?universal_categories=' + changeFrom + '\', \'?universal_categories=' + changeTo + '\')');
                                         var text = jQuery('#universal_categories-'+changeTo).text();
+										var custom = '';
                                         //console.log("TEXT:"+text);
-                                        jQuery(v).attr('onclick', 'changeUrl(\'?universal_categories=' + changeFrom + '\', \'?universal_categories=' + changeTo + '\');jQuery(\'#tmp_current_val\').val(\''+text+'\');');
+                                        var url = window.location.href;
+										if (url.indexOf("custom") > 0){
+											custom = '&custom=1';
+										}else{
+											custom = '';
+										}
+										
+                                        jQuery(v).attr('onclick', 'changeUrl(\'?universal_categories=' + changeFrom + '\', \'?universal_categories=' + changeTo + custom + '\');jQuery(\'#tmp_current_val\').val(\''+text+'\');');
 
                                     }
 
@@ -126,16 +134,32 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 										if (pathname.indexOf("universal_categories") > 0){
 											jQuery(".fme_layered_clearall").removeClass("_selected_");
 											if (pathname.indexOf("=") > 0){
-												var equalsto = pathname.search("=");	
-												var id = pathname.substring(equalsto + 1);
+												var and = '';
+												var length = '';
+												var id = '';
+												var equalsto = '';
+												equalsto = pathname.search("=");	
+												if (pathname.indexOf("&") > 0){
+													and = pathname.search("&");	
+													length = and - equalsto;
+													id = pathname.substr(equalsto + 1, length - 1);
+												}else{
+													id = pathname.substring(equalsto + 1);												
+												}
 												jQuery("#universal_categories-"+id).addClass("dont_click_it");
+												if (pathname.indexOf("custom") > 0){
+													jQuery('#current_url').val('custom');
+												}
 											}
 											
 										}
 										else
 										{
-											jQuery(".fme_layered_clearall").addClass("_selected_");
-											jQuery(".fme_layered_clearall").addClass("dont_click_it");
+											var getvalue = jQuery('#fme_layered_params').val();
+											if( !(getvalue) ){
+												jQuery(".fme_layered_clearall").addClass("_selected_");
+												jQuery(".fme_layered_clearall").addClass("dont_click_it");
+											}
 											
 										}
                                     }
@@ -145,6 +169,11 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                             });
                         </script>
                         <?php $_filters = $this->getFilters();
+						if($_REQUEST['custom']){
+							$custom = 'none';
+						}else{
+							$custom = '';
+						}
                         ?>
                         <?php // $_filters = array_reverse($_filters); ?>
                         <?php foreach ($_filters as $_filter): ?>
@@ -171,11 +200,11 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                             <dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
                                     <?php } else if ($_filter->getVar() == 'universal_categories') {
                                             $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-											if (strpos($currentUrl,'universal_categories=255&custom=1') ==  false) {
+											if (strpos($currentUrl,'universal_categories=158&custom=1') ==  false) {
                                         ?>
 								
-                                        <span>Search By Design: </span>
-                                        <div class="cate-open-close">
+                                        <span style="display:<?php echo $custom ?>">Search By Design: </span>
+                                        <div class="cate-open-close" style="display:<?php echo $custom ?>">
 
                                             <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
                                             <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
@@ -187,7 +216,20 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                     <?php
 											}elseif(strpos($currentUrl,'custom=1') ==  true){
 											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
-												
+?>
+
+                                        <span style="display:<?php echo $custom ?>">Search By Design: </span>
+                                        <div class="cate-open-close" style="display:<?php echo $custom ?>">
+
+                                            <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
+                                            <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
+                                            <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">            
+                                                <li><a class="fme_layered_clearall" style="" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('View All') ?></a></li>
+                                                <?php echo $_filter->getHtml() ?>
+
+                                            </ul></div>
+
+<?php												
 											}
                                     }
                                 } else if ($current_category_p_id != '57' || $current_category_p_id != '58') {
@@ -224,13 +266,12 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                             <a class="opener" href="javascript:void(0)">Material</a>
                                             <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Material: </label> -->
                                             <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
-                                    <?php } else if ($_filter->getVar() == 'universal_categories') {
-                                            $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-											if (strpos($currentUrl,'universal_categories=255&custom=1') ==  false) {
+                                    <?php } else if ($_filter->getVar() == 'universal_categories') {										
+									        $currentUrl = Mage::helper('core/url')->getCurrentUrl();
+											if (strpos($currentUrl,'universal_categories=158&custom=1') ==  false) {
                                         ?>
-								
-                                        <span>Search By Design: </span>
-                                        <div class="cate-open-close">
+                                        <span style="display:<?php echo $custom ?>">Search By Design: </span>
+                                        <div class="cate-open-close" style="display:<?php echo $custom ?>">
 
                                             <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
                                             <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
@@ -242,7 +283,19 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                     <?php
 											}elseif(strpos($currentUrl,'custom=1') ==  true){
 											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
-												
+?>
+                                        <span style="display:<?php echo $custom ?>">Search By Design: </span>
+                                        <div class="cate-open-close" style="display:<?php echo $custom ?>">
+
+                                            <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
+                                            <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
+                                            <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">            
+                                                <li><a class="fme_layered_clearall" style="" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('View All') ?></a></li>
+                                                <?php echo $_filter->getHtml() ?>
+
+                                            </ul></div>
+
+<?php												
 											}
                                     }
                                 }
