--- a/app/design/frontend/creo_mobile/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/creo_mobile/default/template/catalog/product/view.phtml
@@ -104,7 +104,7 @@ if($_product->stock_item->is_in_stock == 0){
                 </div>
             <?php }else { ?>
             <h2><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></h2>
-                <div class="carousel-creo carousel3">
+                <div class="">
                     <div class="product-img-box">
                         <?php echo $this->getChildHtml('media') ?>
                     </div>
