--- a/app/design/frontend/creo_mobile/default/layout/local.xml
+++ b/app/design/frontend/creo_mobile/default/layout/local.xml
@@ -93,11 +93,13 @@
 </catalog_category_default>
 
 
- <catalog_product_view translate="label">
- <reference name="head">
-  <action method="addCss"><stylesheet>css/styles.css</stylesheet></action>
- </reference>
-  </catalog_product_view>
+<catalog_product_view translate="label">
+<reference name="head">
+<action method="addCss"><stylesheet>css/styles.css</stylesheet></action>
+<action method="addCss"><stylesheet>css/owl.carousel.css</stylesheet></action>
+<action method="addItem"><type>skin_js</type><script>js/owl.carousel.min.js</script></action>
+</reference>
+</catalog_product_view>
 
 
    <catalog_product_view> 
