--- a/app/design/frontend/creo_mobile/default/template/attributeswatches/catalog_product_view_media.phtml
+++ b/app/design/frontend/creo_mobile/default/template/attributeswatches/catalog_product_view_media.phtml
@@ -126,8 +126,7 @@ if (!Mage::getStoreConfig('attributeswatches/cloudzoom/enabled') && !Mage::getSt
     
     <div id="product-media-container">
 <?php if ($_product->getImage() != 'no_selection' && $_product->getImage()): ?>
-    <div class="owl-slider1">
-        <div class="product-image">
+        <p class="product-image" style="display:none;">
             <a class="fancybox-main cloud-zoom" id="main-image-link" href="<?php echo $this->helper('catalog/image')->init($_product, 'image')->resize($_zoom_image_width, $_zoom_image_height); ?>" rel="<?php echo $_cloudzoom_options; ?>"onclick="this.href ='javascript: void(0)'">
         <?php
         $_img = '<img class="cloudzoom" id="image" src="' . $this->helper('catalog/image')->init($_product, 'image')->resize($_large_image_width, $_large_image_height) . '" alt="' . $this->htmlEscape($this->getImageLabel()) . '" title="' . $this->htmlEscape($this->getImageLabel()) . '" />';
@@ -135,10 +134,9 @@ if (!Mage::getStoreConfig('attributeswatches/cloudzoom/enabled') && !Mage::getSt
         ?></a><a id='fancybox-link' href='#'><img src="<?php echo $this->getSkinUrl("attributeswatches/img/zoom-in.png");?>" class="product-image-zoom-in" /><?php echo $this->__("Enlarge"); ?></a>
         <a id="product-image-gallery-prev" href="#"><span>&laquo;</span></a>
         <a id="product-image-gallery-next" href="#"><span>&raquo;</span></a>
-        </div>
-</div>
+        </p>
 <?php else: ?>
-        <p class="product-image">
+        <p class="product-image" style="display:none;">
             <a class="fancybox-main" id="main-image-link" href="<?php echo $this->helper('catalog/image')->init($_product, 'image'); ?>" title="<?php echo $this->htmlEscape($this->getImageLabel()); ?>">
         <?php
         $_img = '<img id="image" src="' . $this->helper('catalog/image')->init($_product, 'image')->resize($_large_image_width, $_large_image_height) . '" alt="' . $this->htmlEscape($this->getImageLabel()) . '" title="' . $this->htmlEscape($this->getImageLabel()) . '" />';
@@ -177,11 +175,11 @@ if (!Mage::getStoreConfig('attributeswatches/cloudzoom/enabled') && !Mage::getSt
     <?php if ($_carousel_direction!='vertical' ): ?>
         <?php /*?><h2><?php echo $this->__('More Views') ?></h2><?php */?>
     <?php endif;?>
-        <div class="<?php echo $_container_class; ?>" id="product-gallery-container" style="display:none;">
+        <div class="<?php echo $_container_class; ?>" id="product-gallery-container">
             <ul class="<?php echo $_list_class; ?>">
                 <?php foreach ($this->getGalleryImages() as $_image): ?>
                     <li  class="<?php echo $_image->getAssociatedAttributes(); ?> product-image-thumbs" <?php if ($_image->getDisabled()): ?>style="display:none;"<?php endif; ?>>
-                        <a class="fancybox-gallery" href="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_large_image_width, $_large_image_height); ?>" rel="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_zoom_image_width, $_zoom_image_height); ?>" title="<?php echo $this->htmlEscape($_image->getLabel()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_small_image_width, $_small_image_height); ?>" width="<?php echo $_small_image_width; ?>" height="<?php echo $_small_image_height; ?>" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>" /></a>
+                        <a class="fancybox-gallery" href="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_large_image_width, $_large_image_height); ?>" rel="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_zoom_image_width, $_zoom_image_height); ?>" title="<?php echo $this->htmlEscape($_image->getLabel()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_large_image_width, $large_image_height); ?>" width="<?php echo $_large_image_width; ?>" height="<?php echo $large_image_height; ?>" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>" /></a>
                     </li>
                 <?php endforeach; ?>
             </ul>
@@ -195,13 +193,12 @@ if (!Mage::getStoreConfig('attributeswatches/cloudzoom/enabled') && !Mage::getSt
         var _PRODUCT_CAROUSEL_GALLERY_SETTINGS = {
             mode: '<?php echo $_carousel_direction; ?>',
             infiniteLoop: <?php echo (int)($_carousel_direction === 'horizontal'); ?> ,
-            minSlides: <?php echo (int)$_carousel_settings['min_items'];?>,
+            minSlides: 1,<?php //echo (int)$_carousel_settings['min_items'];?>
             maxSlides: <?php echo (int)$_carousel_settings['max_items'];?>,
             moveSlides: <?php echo (int)$_carousel_settings['move_items'];?>,
             pager: false,
-            slideMargin: 5,
-            slideWidth: <?php echo $_small_image_width;?>
-            
+            slideMargin:0,
+            slideWidth: <?php echo $_large_image_width;?>
         };
     <?php endif; ?>
     </script>
